Fix Aroldo Misi's profile alignment

--- a/src/pages/Researchers/Personal_pages/Aroldo/Aroldo.module.css
+++ b/src/pages/Researchers/Personal_pages/Aroldo/Aroldo.module.css
@@ -38,7 +38,6 @@
   padding-top: 6px;
   padding-left: 230px;
   padding-right: 15px;
-  overflow-y: scroll;
 
 }
 
